# spetl

./: .gitignore  pyproject.toml
data/: data.sqlite  extracted.csv
nix/: flake.nix
src/: analyze.py  extract.py  load.py  main.py  transform.py
