[tool.poetry]
name = "spetl"
version = "0.1.0"
description = ""
authors = ["Akshat Agarwal <hey@akshat.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
